export enum FPType {

    HUMAN = "HUMAN",
    NO_HUMAN = "NO_HUMAN"
}