%%{init: { 
    'theme': 'dark', 
    'themeVariables': { 
        'background': '#121212', 
        'lineColor': '#a5d7f7', 
        'fontFamily': 'Cascadia Code, Fira Code, Consolas, Courier New, monospace', 
        'fontSize': '14px' 
    },
    'themeCSS': 'path { stroke-width: 1.5px !important; }'
} }%%

classDiagram

class FlyingGr0n3 {
    + getData(id: number) List~Gr0n3Object~
}

class Gr0n3Object {
    - size: string
    - type: string
    - kind: string
}

class FalderP {
    + getData() List~Perr177~
}

class Perr177 {
    - id: number
    - detections: List~Perr177Data~
}

class Perr177Data {
    - type: FPType
    - size: string
    - gender: FPGender
}

class Detection {
    - deviceId: number
    - type: string
    - size: string
    - observation: string
}

class SurveillanceAdapter {
    + convertir(origen: Gr0n3Object | Perr177Data, deviceId: number) Detection
}

class SurveillanceService {
    + fetchSurveillanceData() List~Detection~
    + printInfo(detections: List~Detection~) void
}

class FPType {
    <<enumeration>>
    HUMAN
    NO_HUMAN
}

class FPGender {
    <<enumeration>>
    MALE
    FEMALE
}

FlyingGr0n3 ..> Gr0n3Object : dependencia

FalderP ..> Perr177 : dependencia

Perr177 *-- Perr177Data : composición

SurveillanceAdapter ..> Gr0n3Object : dependencia
SurveillanceAdapter ..> Perr177Data : dependencia
SurveillanceAdapter ..> Detection : dependencia

SurveillanceService ..> FlyingGr0n3 : dependencia
SurveillanceService ..> FalderP : dependencia
SurveillanceService ..> SurveillanceAdapter : dependencia
SurveillanceService ..> Detection : dependencia

classDef default fill:#362b2b,stroke:#f39bce,color:#e4dcd2